<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">白金英雄坛说EX</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="topmenu_item1">查看</string>
    <string name="topmenu_item2">物品</string>
    <string name="topmenu_item3">技能</string>
    <string name="topmenu_item4">功能</string> 
    <string name="statpage1">状态</string>
    <string name="statpage2">描述</string>
    <string name="statpage3">属性</string>
    <string name="drinking">你在井边用杯子舀起井水喝</string>
    <string name="version_name">v1.1【精雕细琢】</string>
    <color name="black">#000</color>

</resources>
