<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/dialog"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:background="@drawable/border"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/btnStat1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/noborder"
        android:text="@string/topmenu_item1" />

    <Button
        android:id="@+id/btnStat2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/noborder"
        android:text="@string/topmenu_item2" />

    <Button
        android:id="@+id/btnStat3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/noborder"
        android:text="@string/topmenu_item3" />

    <Button
        android:id="@+id/button01"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/noborder"
        android:text="@string/topmenu_item4" />

</LinearLayout>
